[gd_scene load_steps=6 format=3 uid="uid://cfsnddkshv6p8"]

[ext_resource type="Script" path="res://prefab/UI/PotionPanel.gd" id="1_dbfr5"]
[ext_resource type="Texture2D" uid="uid://clris5dux08rw" path="res://assets/UI/MenuPlate.png" id="1_x2fpw"]
[ext_resource type="Texture2D" uid="uid://b7dlgeuf7s57n" path="res://assets/items/Health Potion.png" id="2_cutw1"]
[ext_resource type="FontFile" uid="uid://bddtsccx0qour" path="res://assets/UI/Fonts/dogicapixel.otf" id="3_iok15"]
[ext_resource type="Texture2D" uid="uid://b3ndqir8hkt88" path="res://assets/items/Mana Potion.png" id="4_csfq0"]

[node name="PotionPanel" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -54.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_dbfr5")

[node name="BG" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_x2fpw")
patch_margin_left = 41
patch_margin_top = 7
patch_margin_right = 41
patch_margin_bottom = 7

[node name="M" type="MarginContainer" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="H" type="HBoxContainer" parent="BG/M"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="HealthPots" type="TextureRect" parent="BG/M/H"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_cutw1")
stretch_mode = 4

[node name="AmountLabel" type="Label" parent="BG/M/H/HealthPots"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_iok15")
theme_override_font_sizes/font_size = 8
text = "0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="EnergiePots" type="TextureRect" parent="BG/M/H"]
layout_mode = 2
texture = ExtResource("4_csfq0")

[node name="AmountLabel" type="Label" parent="BG/M/H/EnergiePots"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_iok15")
theme_override_font_sizes/font_size = 8
text = "0"
horizontal_alignment = 2
vertical_alignment = 2
